# prediccion-desercion-universitaria

./: .gitignore  README.md  kedro_config.yml  pyproject.toml  requirements.txt
.virtual_documents/notebooks/: 01_exploratory_analysis.ipynb  02_supervised_modeling.ipynb  03_model_evaluation.ipynb
conf/base/: catalog.yml
data/01_raw/: asistencia.csv  calificaciones.csv  estudiantes.csv  inscripciones.csv
notebooks/: 01_exploratory_analysis.ipynb  02_supervised_modeling.ipynb  03_model_evaluation.ipynb  04_hyperparameter_optimization.ipynb  05_final_analysis.ipynb  06_metrics_visualization.ipynb
results/metrics/: rl_metrics.csv  supervised_metrics.csv  unsupervised_metrics.csv
src/pruebaii/: __init__.py  __main__.py  settings.py
src/pruebaii/pipelines/data_processing/: nodes.py  pipeline.py
src/pruebaii/pipelines/data_science/: nodes.py  pipeline.py
