[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "pruebaii"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.3.1",
]

[project.scripts]
pruebaii = "pruebaii.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "pruebaii.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "pruebaii"
project_name = "pruebaii"
kedro_init_version = "1.3.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "7d5cd77ca4aa4a87a0bc450a4a497de1"
